tests/bad_label.b
here[];

main() {
    extrn here, smth;
here:
    goto smth;
}

here() {
    goto here;
}
